# ai_ads

./: .env.example  .gitignore  collect_data.py  deploy.sh  docker-compose.yml  dump.rdb  kill8000.bat  start.bat  wb_api_docs.md
backend/: Dockerfile  alembic.ini  bootstrap_db.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  routes.py
backend/app/clients/: __init__.py  base_client.py  ozon_client.py  wb_client.py
backend/app/executor/: __init__.py  action_executor.py
backend/app/llm/: __init__.py  analyzer.py  client.py  prompt_builder.py  response_parser.py
backend/app/models/: __init__.py  base.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/tasks/: celery_app.py  data_collector.py  optimization_cycle.py
backend/app/utils/: __init__.py  encryption.py  rate_limiter.py
backend/tests/: test_executor.py  test_llm.py  test_ozon_client.py  test_wb_client.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Layout.jsx  api.js  index.css
